--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -4,11 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}"> <!-- Linking to external CSS file -->
 </head>
-<body>
-    <h1>Welcome to the Flask App!</h1>
-    <p>What would you like to do?</p>
-    <button onclick="location.href='/view_data'">View All Data</button>
-    <button onclick="location.href='/add_data'">Add New Data</button>
+<body class="bg-light">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-custom">
+        <a class="navbar-brand" href="#">Welcome {{ username }}!</a>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+                <!-- Dropdown menu for options -->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="fas fa-bars"></span> <!-- Hamburger icon from Font Awesome -->
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/add_data">Create User</a>
+                        <a class="dropdown-item" href="/view_data">View All Users</a>
+                        <a class="dropdown-item" href="/create_admin">Create Admin Account</a>
+                        <a class="dropdown-item" href="/admin_view_all">View All Admins</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{{ url_for('main.logout') }}">Logout</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Main content -->
+    <div class="container text-center mt-5">
+        <h1 class="mb-4">ADMIN - Dashboard</h1>
+        <p class="lead">What would you like to do?</p>
+        <div class="mt-4">
+            <a href="/add_data" class="btn btn-success btn-lg mx-2">Create User</a>
+            <a href="/view_data" class="btn btn-warning btn-lg mx-2">View All Users</a><br><br>
+            <a href="/create_admin" class="btn btn-success btn-lg mx-2">Create Admin Account</a>
+            <a href="/admin_view_all" class="btn btn-warning btn-lg mx-2">View All Admins</a>         
+        </div>
+    </div>
+
+    <!-- Bootstrap JS and dependencies (jQuery and Popper.js) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
